crates/buff-lang-codegen-rust/tests/snapshots/toml_codegen__toml_codegen_parse_ident_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/toml_codegen.rs
expression: src
---
fn f() {
    toml::from_str::<std::collections::HashMap<String, toml::Value>>(&input)
        .unwrap_or_default();
}
