crates/buff-lang-codegen-rust/tests/snapshots/toml_codegen__toml_codegen_stringify_snapshot.snap
---
source: crates/buff-lang-codegen-rust/tests/toml_codegen.rs
expression: src
---
fn f() {
    toml::to_string(&m).unwrap_or_default();
}
